Aggiunti popup a tutti i passaggi di gioco, spostata lista citta

--- a/Lezione7/mappa/map.css
+++ b/Lezione7/mappa/map.css
@@ -39,3 +39,10 @@
 	background-color: chocolate;
 	z-index:5;
 }
+
+#contenitore-mappa .city.partenza{
+	background-color: blue;
+}
+#contenitore-mappa .city.arrivo{
+	background-color: green;
+}
