--- a/Lezione7/stili.css
+++ b/Lezione7/stili.css
@@ -40,3 +40,23 @@ body{
 #splash img{
 	margin:2em;
 }
+
+#popup-gioco{
+	display:none;
+
+	flex-direction:column;
+
+	position:absolute;
+	background-color: blueviolet;
+	width:90%;
+	height:80%;
+
+	border-radius:6px;
+	border:5px solid green;
+	box-shadow:0px 5px 5px yellow;
+
+	z-index:100;
+}
+#popup-gioco.visibile{
+	display:flex;
+}
